# etfwa

./: .gitignore  README.md  notes.md
client/: .gitignore  bower.json  package.json  webpack.config.js
client/html/: index_template.html
client/src/: App.purs  CounterExample.purs  EchoOnly.purs  RoutesExample.purs  entry-counter.js  entry-routes.js  entry.js  index.js  settings.js
data/: settings.js
server/: LICENSE  etfwa-server.cabal  stack.yaml
server/app/: Main.hs
server/src/: Client.hs  Echo.hs  EchoClient.hs
