name:                etfwa-server
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/HanStolpo/simple#readme
license:             BSD3
license-file:        LICENSE
author:              Handré Stolp
maintainer:          hanstolpo@gmail.com
copyright:           None
category:            NA
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Echo, Client
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  build-depends:       servant-server == 0.4.*
                     , servant == 0.4.*
                     , aeson
                     , warp
                     , time
                     , wai
                     , text
                     , either
                     , transformers
                     , directory

executable etfwa-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , etfwa-server
  default-language:    Haskell2010

test-suite etfwa-server-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , etfwa-server
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/HanStolpo/simple
